7) Use `Model.findById()`

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI="mongodb+srv://freecodecamp-user:Q9VndDaXq3rmsLU@cluster0.ugowr.mongodb.net/nodejs-freecodecamp?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://freecodecamp-user:L74JopoCliN3cgbF@cluster0.ugowr.mongodb.net/nodejs-freecodecamp?retryWrites=true&w=majority"
